--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "client": "cd client && npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "cd client && npm run build",
+    "vercel-build": "npm run install-all && npm run build",
     "install-client": "cd client && npm install",
     "install-server": "cd server && npm install",
     "install-all": "npm install && npm run install-client && npm run install-server",
