--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
 node_modules
 .vercel
 .env*.local
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+
+# Server environment
+server/.env
+server/.env.local
+server/.env.development
+server/.env.production
+
+# Client environment
+client/.env
+client/.env.local
+client/.env.development
+client/.env.production
