--- a/server/env.example
+++ b/server/env.example
@@ -1,13 +1,20 @@
+# Database Configuration
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/database?retryWrites=true&w=majority
+
+# JWT Configuration
+JWT_SECRET=your_jwt_secret_here_make_it_long_and_random
+
 # Server Configuration
 PORT=5000
 NODE_ENV=development
 
-# Database Configuration
-MONGODB_URI=mongodb://localhost:27017/ecommerce
+# Optional: Payment Gateway (if using Stripe)
+# STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+# STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
 
-# JWT Configuration
-JWT_SECRET=your_jwt_secret_key_here
-JWT_EXPIRE=30d
+# Optional: Email Service (if using SendGrid)
+# SENDGRID_API_KEY=your_sendgrid_api_key
+# EMAIL_FROM=noreply@yourapp.com
 
 # File Upload Configuration
 MAX_FILE_SIZE=5242880
